# creator-intel

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  README.md
.github/workflows/: ci.yml  deploy.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: auth.py  clerk_sync.py  config.py  deps.py  main.py
apps/api/app/ai/: embeddings.py  llm.py  memory.py  reports.py  scoring.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  ai.py  channel.py  content.py  tenant.py
apps/api/app/pipeline/: assembly.py  clustering.py  dedupe.py  filtering.py  representatives.py  sentiment.py
apps/api/app/repositories/: base.py  channels.py  subscriptions.py  sync.py  tenant.py
apps/api/app/routers/: analysis.py  billing.py  chat.py  youtube.py
apps/api/app/services/: billing.py  crypto.py  importer.py  oauth_state.py  pipeline.py  queue.py  token_service.py  youtube.py
apps/api/app/worker/: jobs.py  settings.py
apps/api/tests/: test_ai.py  test_auth.py  test_billing.py  test_clerk_sync_helpers.py  test_config.py  test_pipeline.py  test_youtube_services.py
apps/web/: .env.example  next.config.mjs  package.json  tailwind.config.ts  vercel.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AppShell.tsx  Aurora.tsx  ChatPanel.tsx  Logo.tsx  ReportView.tsx  ScoreGauge.tsx  (+2 more)
infra/docker/: docker-compose.yml
(+17 files in other folders)
