[project]
name = "creator-intel-api"
version = "0.1.0"
description = "Creator Intelligence Platform — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyjwt[crypto]>=2.10.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "cryptography>=44.0.0",
    "arq>=0.26.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "anthropic>=0.49.0",
    "stripe>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
